# cityjson2jsonfg

./: .gitignore  CONTRIBUTING.md  README.md  README_DATA.txt  justfile  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-cli.yml
cityjson2jsonfg/: cli.py  convert.py  main.py
src/cityjson2jsonfg/: cli.py
tests/: conftest.py  test_cli.py  test_convert.py  test_main.py
tests/data/: 3dbag_v210908_fd2cee53_5910_subset.json
